# qualisys_bridge

./: .clang-format  .gitmodules  CMakeLists.txt  ReadMe.md  package.xml
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose.yml
include/qualisys_bridge/: qualisys_bridge_core.hpp  qualisys_bridge_node.hpp
src/: qualisys_bridge_node.cpp
